# excuse_generator

./: CMakeLists.txt  README.md
data/: excuses.db
drafts/: action  cause  consequence_canthelp  consequence_late  consequence_nomoney  consequence_notcoming  incident  object  opening_canthelp  opening_late  opening_nomoney  opening_notcoming  place
frontend/: index.html  script.js  style.css
include/: database.h  logic.h
src/: database.cpp  logic.cpp  main.cpp  write_to_db.cpp
